[package]
name = "reflectix-core"
version = "0.1.0"
edition = "2021"
description = "Primitive run-time type reflection for Rust"
documentation = "https://docs.rs/reflectix"
repository = "https://github.com/abusers-inc/reflectix"
homepage = "https://github.com/abusers-inc/reflectix"
license = "GPL-3.0-or-later"
categories = ["data-structures", "rust-patterns" ]

[dependencies]
paste = "1.0.15"
thiserror.workspace = true
