[package]
name = "reflectix-macros"
version = "0.1.0"
edition = "2021"
description = "Primitive run-time type reflection for Rust"
documentation = "https://docs.rs/reflectix"
repository = "https://github.com/abusers-inc/reflectix"
homepage = "https://github.com/abusers-inc/reflectix"
license = "GPL-3.0-or-later"
categories = ["data-structures", "rust-patterns" ]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.67", features = ["extra-traits"] }
reflectix-core = {path = "../reflectix-core", version = "0.1"}
